--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">Proyek Akhir PAM</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_home">Home</string>
+    <string name="title_leftover_share">Leftover Share</string>
+    <string name="title_food_pickup">Food Pickup</string>
+    <string name="title_profile">Profile</string>
 </resources>
