--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Proyek Akhir PAM</string>
+    <string name="app_name">Leftover Love</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="title_home">Home</string>
     <string name="title_leftover_share">Leftover Share</string>
